# Athenahack-18

./: .gitignore  lefthook.yml  taskfile.yml
.github/workflows/: lint.yml
backend/: pyproject.toml  schema.sql  taskfile.yml  tox.ini
backend/docker/: .env  Dockerfile  docker-compose.dev.yml
backend/server/: config.yml  launcher.py
backend/server/utils/: config.py  db.py  exceptions.py
ml/: HateBert.ipynb
server/: README.md  atlas.hcl  config-example.yml  pyproject.toml  requirements-dev.txt  requirements.txt  taskfile.yml  tox.ini
server/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  example.env
server/src/: brokers.py  celeryconfig.py  core.py  launcher.py
server/src/ml/: __init__.py
server/src/routes/: me.py  scan.py  test.py
server/src/tasks/: scan.py
server/src/utils/: db.py  requests.py  responses.py  sessions.py
web/: biome.json  lefthook.yml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-ext/: biome.json  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/components/: globalnav.tsx
web/src/components/ui/: navigation-menu.tsx
web/src/routes/: index.tsx
